try fixing ipad bg img too big.. 2

--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -21,15 +21,11 @@
   z-index: -2;
 
   width: 100%;
-  height: 100vh;
-  margin-bottom: 20px;
-  border-bottom: 20px solid $color-darkgray;
 
   background: {
     image: url(../../assets/img/bg-init.jpg);
     position-x: center;
     size: cover;
-    attachment: fixed;
   }
 
   .index-container {
